# p2p-share

./: .gitignore  Cargo.toml  README.md  Rapport.docx  gradle.properties  settings.gradle.kts
.cargo/: config.toml
.github/workflows/: ci.yml  desktop.yml  release.yml
android/: gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/akily/p2pshare/: MainActivity.kt
android/app/src/main/java/com/akily/p2pshare/bridge/: NativeTransferController.kt  RustBindings.kt  TransferEngine.kt  TransferEngineFactory.kt
android/app/src/main/java/com/akily/p2pshare/model/: TransferModels.kt
android/app/src/main/java/com/akily/p2pshare/storage/: FilePrep.kt  PrefsStore.kt
android/app/src/main/java/com/akily/p2pshare/ui/: P2PShareApp.kt  PortraitCaptureActivity.kt  TransferViewModel.kt
android/app/src/main/java/com/akily/p2pshare/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/scripts/: build-rust-android.sh
app/: build.gradle.kts
crates/android-bindings/: Cargo.toml  build.rs
crates/android-bindings/src/: jni_bridge.c  lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: json_mode.rs
crates/core/: Cargo.toml
crates/core/src/: bundle.rs  events.rs  lib.rs  progress.rs  protocol.rs  receiver.rs  sender.rs  ticket.rs
electron/: README.md  electron.vite.config.ts  package-lock.json  package.json  tsconfig.json
electron/docs/: event-schema.md
electron/scripts/: test-packaged-binary.js
electron/src/main/: main.ts
electron/src/preload/: preload.ts
electron/src/renderer/: global.d.ts  index.html  renderer.ts  styles.css
electron/src/shared/: ipc.ts  schema.ts
src/: cli.rs  code.rs  connect_string.rs  crypto.rs  main.rs  protocol.rs  qr.rs  receiver.rs  sender.rs  ticket.rs
