[package]
name = "p2p-share"
version = "0.2.0"
edition = "2021"
description = "A simple P2P file sharing tool"

[dependencies]
anyhow = "1.0.100"
blake3 = "1.8.2"
clap = { version = "4.5", features = ["derive"] }
data-encoding = "2"
indicatif = "0.18.0"
iroh = "0.92.0"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
n0-future = "0.1"
snow = "0.9"
qr2term = "0.3"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "fs", "io-util", "net"] }
