[workspace]
members = [
  "crates/core",
  "crates/cli",
  "crates/android-bindings",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.100"
blake3 = "1.8.2"
clap = { version = "4.5", features = ["derive"] }
data-encoding = "2"
indicatif = "0.18.0"
iroh = "0.92.0"
n0-future = "0.1"
qr2term = "0.3"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
snow = "0.9"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "fs", "io-util", "net", "sync", "time"] }
cc = "1"
