[package]
name = "p2p-share-android-bindings"
version = "0.1.0"
edition.workspace = true

[lib]
name = "p2p_share_android_bindings"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
p2p-share-core = { path = "../core" }

[build-dependencies]
cc.workspace = true
