[package]
name = "p2p-share-core"
version = "0.2.0"
edition.workspace = true
description = "Core transfer engine for p2p-share"

[dependencies]
anyhow.workspace = true
blake3.workspace = true
data-encoding.workspace = true
indicatif.workspace = true
iroh.workspace = true
n0-future.workspace = true
qr2term.workspace = true
serde.workspace = true
serde_json.workspace = true
snow.workspace = true
tokio.workspace = true
